Fixed layout problems, all thats left is adding text

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,15 +55,28 @@ nav {
 
 .grid {
     display: inline-grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
     max-width: 90vw;
     margin: 0vh 10vw;
 }
 
-.grid-items {
+.grid-item {
+    margin-left: 9vw;
+    margin-right: 9vw;
+}
+
+.grid-video, .grid-img {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h2, h3 {
     text-align: center;
-    justify-content: center;
-    padding: 10px 10px;
+}
+
+p {
+    margin-left: 10vw;
+    margin-right: 10vw;
 }
 
 #sources {
@@ -71,11 +84,11 @@ nav {
     display: grid;
     grid-template-columns: auto;
     justify-content: center;
-    text-align: center;
 }
 
 #source-header {
     text-decoration: underline;
+    text-align: center;
 }
 
 .bottom-menu {
